Refactor .gitignore and extract_features.py, and update main.py

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ trained_tcn_model.pth
 audios
 all_cls_tokens_concatenated.pkl
 all_cls_tokens_concatenated.pt
+test.py
+features_labels1.pt
+all_cls_tokens_concatenated1.pt
