--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ features_labels1.pt
 all_cls_tokens_concatenated1.pt
 text_features_and_labels.pt
 text_features_and_labels_second_try.pt
+processed_files.txt
