reduce audio features size

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ all_cls_tokens_concatenated1.pt
 text_features_and_labels.pt
 text_features_and_labels_second_try.pt
 processed_files.txt
+processed_features
