--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ processed_files.txt
 processed_features
 gitignore
 tcn_model.pth
+BERT_PIPELINE\xlnet_finetuned_epoch_freezing_firstLayers_10_BEST
+BERT_PIPELINE\xlnet_finetuned_epoch_freezing_firstLayers_20_Best
+BERT_PIPELINE\transcriptions.jsonl
+intermediate_results\processed_features
+intermediate_results\features_labels.pt
+process_text_audio_seperatly\text_features_only\text_features_and_labels.pt
