Bert pipe line is ready, Bert is finetuned, text features extracted also cls features, and tcn model has been saved

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,20 @@ processed_files.txt
 processed_features
 gitignore
 tcn_model.pth
-BERT_PIPELINE\xlnet_finetuned_epoch_freezing_firstLayers_10_BEST
-BERT_PIPELINE\xlnet_finetuned_epoch_freezing_firstLayers_20_Best
-BERT_PIPELINE\transcriptions.jsonl
-intermediate_results\processed_features
-intermediate_results\features_labels.pt
-process_text_audio_seperatly\text_features_only\text_features_and_labels.pt
+# Ignore large model files
+BERT_PIPELINE/xlnet_finetuned_epoch_freezing_firstLayers_10_BEST/model.safetensors
+BERT_PIPELINE/xlnet_finetuned_epoch_freezing_firstLayers_20_Best/model.safetensors
+new_trial/xlnet_finetuned_epoch_3/model.safetensors
+BERT_PIPELINE/xlnet_finetuned_epoch_freezing_firstLayers_10_BEST
+BERT_PIPELINE/xlnet_finetuned_epoch_freezing_firstLayers_20_Best
+new_trial/xlnet_finetuned_epoch_3
+BERT_PIPELINE/transcriptions.jsonl
+intermediate_results/processed_features
+intermediate_results/features_labels.pt
+cls_features.pt
+all_token_features.pt
+full_tcn_model.pth
+labels.pkl
+tcn_model.pth
+BERT_PIPELINE/bert-base-cased_freezing_firstLayers_20_Best
+BERT_PIPELINE/bert-base-cased_freezing_firstLayers_10_BEST
