--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,21 @@ tcn_model.pth
 BERT_PIPELINE/bert-base-cased_freezing_firstLayers_20_Best
 BERT_PIPELINE/bert-base-cased_freezing_firstLayers_10_BEST
 BERT_PIPELINE/cls_features
+extracted_features_from_ICNALE
+training_features_Icnale
+testing_features_Icnale
+.gitignore
+Wav2vec pipeline/Second_try_more_freezing_layers
+Wav2vec pipeline/ICNALE_features_training_pooled_dataset
+Wav2vec pipeline/ICNALE_features_testing_pooled_dataset
+testing_features_Icnale_base_model
+bert_finetuned_epoch_9
+training_features_Icnale_base_model
+full_features_tcn_model_icnale_dataset.pth
+Wav2vec pipeline/ICNALE_features_testing_dataset
+Wav2vec pipeline/ICNALE_features_training_dataset
+best_tcn_model.pth
+epoch_13
+Icnale_testing_transcription.jsonl
+Icnale_training_transcription.jsonl
+BERT_PIPELINE\transcriptions.jsonl
